force-app/main/default/objects/Event__c/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Actual</label>
    <type>Checkbox</type>
</CustomField>