force-app/main/default/objects/Event__c/fields/AvailableSeats__c.field-meta.xml
<CustomField>
    <fullName>AvailableSeats__c</fullName>
    <label>Available seats</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>