force-app/main/default/objects/Event__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>