force-app/main/default/objects/Event__c/fields/MaxAttendees__c.field-meta.xml
<CustomField>
    <fullName>MaxAttendees__c</fullName>
    <defaultValue>$CustomMetadata.Event_Setting__mdt.Default.Max_available_seats__c</defaultValue>
    <label>Max attendees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>