force-app/main/default/objects/Event__c/fields/Type_of_event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_event__c</fullName>
    <label>Type of event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>