force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Actual__c</columns>
    <columns>Type_of_event__c</columns>
    <columns>Date__c</columns>
    <columns>DateTime__c</columns>
    <columns>Location__c</columns>
    <columns>Description__c</columns>
    <columns>MaxAttendees__c</columns>
    <columns>AvailableSeats__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>